--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "@angular/material/prebuilt-themes/deeppurple-amber.css";
+body {
+  overflow: hidden;
+}
+.mat-form-field-appearance-outline .mat-form-field-outline {
+  color: #4A4480;
+}
